--- a/ecs-lens.cabal
+++ b/ecs-lens.cabal
@@ -29,10 +29,10 @@ executable ecs-lens
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0,
-                      mtl ^>=2.3.1,
-                      lens ^>=5.2.1,
-                      containers ^>=0.6.7,
-                      data-default ^>= 0.7.1
+    build-depends:    base,
+                      mtl,
+                      lens,
+                      containers,
+                      data-default
     hs-source-dirs:   app
     default-language: Haskell2010
